test_case/rust-lang_rust/52701_424723971_2.rs
rust
    fn matcher(x: u8) {
      match x { //~ ERROR
        0 .. 32 => { /* foo */ }
      }
    }
    